--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-MY_PATH="C:/php/ext" # or can be modified when php.ini exists
+MY_PATH="" # Set this when php.ini is in different directory otherwise leave empty
