--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-MY_PATH="" # Set this when php.ini is in different directory otherwise leave empty
+MY_PATH="C:\php\php.ini" # Set the path to your php.ini file
