--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-MY_PATH="C:\php\php.ini" # Set the path to your php.ini file
+PVM_PATH="" // when use PVM, then command will be bun start PHP-8.3.12, if default then bun start
+
+
+# MY_PATH="C:/Users/Sabuz/pvm/"
