--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-PVM_PATH="" // when use PVM, then command will be bun start PHP-8.3.12, if default then bun start
+PVM_PATH="" # when use PVM, then command will be bun start PHP-8.3.12, if default then bun start
 
-
-# MY_PATH="C:/Users/Sabuz/pvm/"
