--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-PVM_PATH="" # when use PVM, then command will be bun start PHP-8.3.12, if default then bun start
-
+#PVM_PATH="C:/Users/Sabuz/pvm/" #ok
+#LARAGON_PATH='C:/laragon/bin/' #ok
+#XAMPP_PATH='C:/xampp/php'
+#WAMPP_PATH='C:/wamp64/bin/' 
+#DEFAULT_PATH='C:/php'
