updated for xampp, wampp, and laragon

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 #PVM_PATH="C:/Users/Sabuz/pvm/" #ok
 #LARAGON_PATH='C:/laragon/bin/' #ok
-#XAMPP_PATH='C:/xampp/php'
+#XAMPP_PATH='C:/xampp/php/'
 #WAMPP_PATH='C:/wamp64/bin/' 
-#DEFAULT_PATH='C:/php'
+#DEFAULT_PATH='C:/php/'
