--- a/package.json
+++ b/package.json
@@ -5,8 +5,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "bun run index.ts"
+    "test": "bun test",
+    "start": "bun run index.ts",
+    "cli": "bun run index.ts",
+    "php-ini": "bun run index.ts",
+    "quick": "bun run index.ts quick",
+    "list": "bun run index.ts list",
+    "backup": "bun run index.ts backup",
+    "extensions": "bun run index.ts extensions",
+    "view": "bun run index.ts view",
+    "fix": "bun fix-php-config.ts",
+    "fix-extensions": "bun fix-missing-extensions.ts",
+    "doctor": "bun fix-php-config.ts && bun fix-missing-extensions.ts"
+  },
+  "bin": {
+    "php-ini-pro": "./index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -15,6 +28,15 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "fs-extra": "^11.2.0"
+    "boxen": "^8.0.1",
+    "chalk": "^5.5.0",
+    "cli-table3": "^0.6.5",
+    "commander": "^14.0.0",
+    "figlet": "^1.8.2",
+    "fs-extra": "^11.2.0",
+    "gradient-string": "^3.0.0",
+    "inquirer": "^12.9.0",
+    "ora": "^8.2.0",
+    "yargs": "^18.0.0"
   }
 }
