preset added for laravel,and others

--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "scripts": {
     "test": "bun test",
     "start": "bun run index.ts",
-    "cli": "bun run index.ts",
-    "php-ini": "bun run index.ts",
+    "smart": "bun run index.ts smart",
+    "preset": "bun run index.ts preset",
+    "laravel": "bun run index.ts preset",
+    "wordpress": "bun run index.ts preset",
+    "symfony": "bun run index.ts preset",
+    "interactive": "bun run index.ts interactive",
     "quick": "bun run index.ts quick",
     "list": "bun run index.ts list",
     "backup": "bun run index.ts backup",
