preset and other's are optimizing..

--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "scripts": {
     "test": "bun test",
     "start": "bun run index.ts",
-    "smart": "bun run index.ts smart",
+    "config": "bun run index.ts config",
     "preset": "bun run index.ts preset",
+    "smart": "bun run index.ts smart",
+    "extensions": "bun run index.ts extensions",
+    "manual": "bun run index.ts extensions",
     "laravel": "bun run index.ts preset",
     "wordpress": "bun run index.ts preset",
     "symfony": "bun run index.ts preset",
@@ -16,7 +19,6 @@
     "quick": "bun run index.ts quick",
     "list": "bun run index.ts list",
     "backup": "bun run index.ts backup",
-    "extensions": "bun run index.ts extensions",
     "view": "bun run index.ts view",
     "fix": "bun fix-php-config.ts",
     "fix-extensions": "bun fix-missing-extensions.ts",
